--- a/src/main/resources/dev-config.properties
+++ b/src/main/resources/dev-config.properties
@@ -1,5 +1,5 @@
 com.xq-msg.sdk.v2.api-key=<you-api-key-goes-here>
-
+com.xq-msg.sdk.v2.cache-key=com.xqmsg.com.sdk.v2.caching.SimpleXQCache
 com.xq-msg.sdk.v2.subscription-server-url=https://stg-subscription.xqmsg.net/v2
 com.xq-msg.sdk.v2.validation-server-url=https://stg-validation.xqmsg.net/v2
 com.xq-msg.sdk.v2.key-server-url=https://stg-quantum.xqmsg.net
