--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 com.xq-msg.sdk.v2.api-key=<your-api-key-goes-here>
-com.xq-msg.sdk.v2.cache-key=com.xqmsg.com.sdk.v2.caching.SimpleXQCache
+com.xq-msg.sdk.v2.cache-key=com.xqmsg.sdk.v2.caching.SimpleXQCache
 com.xq-msg.sdk.v2.subscription-server-url=https://subscription.xqmsg.net/v2
 com.xq-msg.sdk.v2.validation-server-url=https://validation.xqmsg.net/v2
-com.xq-msg.sdk.v2.key-server-url=https://quantum.xqmsg.net
+com.xq-msg.sdk.v2.key-server-url=https://quantum.xqmsg.net/v2
 
 
