--- a/src/main/resources/dev-config.properties
+++ b/src/main/resources/dev-config.properties
@@ -1,4 +1,4 @@
-com.xq-msg.sdk.v2.api-key=<you-api-key-goes-here>
+com.xq-msg.sdk.v2.api-key=<your-api-key-goes-here>
 com.xq-msg.sdk.v2.cache-key=com.xqmsg.sdk.v2.caching.SimpleXQCache
 com.xq-msg.sdk.v2.subscription-server-url=https://subscription.xqmsg.net/v2
 com.xq-msg.sdk.v2.validation-server-url=https://validation.xqmsg.net/v2
