JSDK-2 config clean up

--- a/src/test/resources/test-config.properties
+++ b/src/test/resources/test-config.properties
@@ -1,5 +1,7 @@
-com.xq-msg.sdk.v2.api-key=<your-api-key-goes-here>
+com.xq-msg.sdk.v2.xq-api-key=<your-xq-api-key-goes-here>
+com.xq-msg.sdk.v2.dashboard-api-key=<your-dashboard-api-key-goes-here>
 com.xq-msg.sdk.v2.cache-key=com.xqmsg.sdk.v2.caching.SimpleXQCache
+com.xq-msg.sdk.v2.dashboard-server-url=https://dashboard.xqmsg.net/v2
 com.xq-msg.sdk.v2.subscription-server-url=https://subscription.xqmsg.net/v2
 com.xq-msg.sdk.v2.validation-server-url=https://validation.xqmsg.net/v2
 com.xq-msg.sdk.v2.key-server-url=https://quantum.xqmsg.net/v2
